--- a/home.html
+++ b/home.html
@@ -9,7 +9,18 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/scripts.js"></script>
 </body>
 </html>
