--- a/pages/question.html
+++ b/pages/question.html
@@ -9,18 +9,18 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <header> 
+    <header>
     </header>
     <main>
-        <form action="">
+        <form id="formpreguntas" action="#" >
 
+
+   
             
         </form>
     </main>
-
     <footer>
     </footer>
-    
     <script src="../scripts/scripts.js"></script>
 </body>
 </html>
