Add/Estructura del html mejor preparada para pasar a validación

--- a/pages/results.html
+++ b/pages/results.html
@@ -12,6 +12,13 @@
     <header>
     </header>
     <main>
+        <section>
+            <div></div>
+            <div>
+                <p></p>
+                <a href="../home.html"><button>VOLVER A JUGAR</button></a>
+            </div>
+        </section>
     </main>
     <footer>
     </footer>
