--- a/home.html
+++ b/home.html
@@ -16,6 +16,9 @@
             <h2>Welcome to the quiz</h2>
             <a href="./pages/question.html"><button>COMENZAR QUIZ</button></a>
         </section>
+        <section>
+            <!-- Tabla arriba y debajo fecha y resultados -->
+        </section>
     </main>
     <footer>
     </footer>
