add/ Guardadas puntuaciones y fecha en localStorage

--- a/pages/results.html
+++ b/pages/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados </title>
+A
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
@@ -13,7 +13,11 @@
     </header>
     <main>
         <section>
-            <div></div>
+            <div>
+                <h2>ESTE ES TU RESULTADO</h2>
+                <p id="puntuacion"></p>
+                <p id="mensajepuntuacion"></p>
+            </div>
             <div>
                 <p></p>
                 <a href="../home.html"><button>VOLVER A JUGAR</button></a>
