Ahora las puntuaciones de la tabla son sólo las 10 últimas

--- a/home.html
+++ b/home.html
@@ -15,19 +15,18 @@
     </header>
     <main>
         <section>
-            <h2>Welcome to the quiz</h2>
+            <h2>Welcome to the quiz:</h2>
             <a href="./pages/question.html"><button>COMENZAR QUIZ</button></a>
         </section>
         <section>
-            <h2>Últimas puntuaciones</h2>
-
+            <h2>Total Score</h2>
 
             <div id="chartdiv">
                 <canvas id="myChart"></canvas>
             </div>
-              
+            <h2>Toda las puntuaciones:</h2>
             <div>
-            <ul id="listapuntuaciones"> <!-- Tabla con fecha y resultados --> </uls>
+            <ul id="listapuntuaciones"></ul>
             </div>
         </section>
     </main>
