add/comienzo css antes de la reparticion de tareas ReadmePablo/CSSFran

--- a/pages/results.html
+++ b/pages/results.html
@@ -12,7 +12,7 @@
     <header>
     </header>
     <main>
-        <section>
+        <section class="flexbox-parent">
             <div>
                 <h2>ESTE ES TU RESULTADO</h2>
                 <p id="puntuacion"></p>
