primera version de todos los estilos mobile first

--- a/pages/results.html
+++ b/pages/results.html
@@ -11,15 +11,14 @@
 <body>
     <header>
     </header>
-    <main>
-        <section class="flexbox-parent">
+    <main class="mainresults">
+        <section class="sectionresults">
             <div>
                 <h2>ESTE ES TU RESULTADO</h2>
                 <p id="puntuacion"></p>
                 <p id="mensajepuntuacion"></p>
             </div>
             <div>
-                <p></p>
                 <a href="../home.html"><button>VOLVER A JUGAR</button></a>
             </div>
         </section>
