--- a/home.html
+++ b/home.html
@@ -14,18 +14,19 @@
     <header>
     </header>
     <main>
-        <section>
-            <h2>Welcome to the quiz:</h2>
+        <section id="bienvenidosection">
             <a href="./pages/question.html"><button>COMENZAR QUIZ</button></a>
         </section>
-        <section>
-            <h2>Total Score</h2>
+        <section id="homesection">
+            <div id="divtabla" class="scorediv">
+            <h2>TUS ÚLTIMAS PUNTUACIONES</h2>
 
             <div id="chartdiv">
                 <canvas id="myChart"></canvas>
             </div>
-            <h2>Toda las puntuaciones:</h2>
-            <div>
+            </div>
+            <div id="divlista" class="scorediv">
+            <h2>TOTAL SCORE</h2>
             <ul id="listapuntuaciones"></ul>
             </div>
         </section>
