--- a/pages/question.html
+++ b/pages/question.html
@@ -11,7 +11,7 @@
 <body>
     <header>
     </header>
-    <main>
+    <main class="mainpreguntas">
         <form id="formpreguntas" action="#" >  
         </form>
     </main>
