add/refactorizacion error almacenamiento/Creacion de la parte escrita de readme/addiccion boton ver resultados a pagina result

--- a/pages/results.html
+++ b/pages/results.html
@@ -20,7 +20,8 @@
             </div>
             <div>
                 <p></p>
-                <a href="../home.html"><button>VOLVER A JUGAR</button></a>
+                <a href="../home.html"><button>Comparar Resultados</button></a>
+                <a href="./question.html"><button>Jugar otra vez</button></a>
             </div>
         </section>
     </main>
