apply/styles in CSS - add/nueva funcionalidad en js para los mensajes de la pagina principal cuando no hay puntuación

--- a/home.html
+++ b/home.html
@@ -30,6 +30,17 @@
             <ul id="listapuntuaciones"></ul>
             </div>
         </section>
+        <section id="primeravez">
+            <div><h2>JUEGA PARA OBTENER TU PRIMERA PUNTUACIÓN</h2></div>
+            <p>Parece que es tu primera vez por aquí</p>
+            <p>Por favor, siéntete como en casa</p>
+            <p id="m1"></p>
+            <p id="m2"></p>
+            <p id="m3"></p>
+            <p id="m4"></p>
+            <p id="m5"></p>
+            <p id="m6"></p>
+        </section>
     </main>
     <footer>
     </footer>
