add/solucion de linkado

--- a/pages/results.html
+++ b/pages/results.html
@@ -19,7 +19,7 @@
                 <p id="mensajepuntuacion"></p>
             </div>
             <div>
-                <a href="../home.html"><button>COMPARA TUS RESULTADOS</button></a>
+                <a href="../index.html"><button>COMPARA TUS RESULTADOS</button></a>
                 <a href="./question.html"><button>VUELVE A INTENTARLO</button></a>
             </div>
         </section>
