--- a/pages/question.html
+++ b/pages/question.html
@@ -17,6 +17,9 @@
     </main>
     <footer>
     </footer>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
     <script src="../scripts/scripts.js"></script>
 </body>
 </html>
