--- a/pages/results.html
+++ b/pages/results.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <div class="logout"></div>
     </header>
     <main class="mainresults">
         <section class="sectionresults">
@@ -26,6 +27,9 @@
     </main>
     <footer>
     </footer>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
     <script src="../scripts/scripts.js"></script>
 </body>
 </html>
