--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
             <section>
                 <h2>LOGIN</h2>
                 <form id="formlog" action="#" method="post">
-                    <label for="logemail">Your mail</label>
-                    <input type="email" name="logemail" placeholder="Your mail...">
-                    <label for="logpassword">Your password</label>
-                    <input type="password" name="logpassword" placeholder="Your password...">
-                    <input type="submit" value="Get in">
+                    <label for="logemail">EMAIL:</label>
+                    <input type="email" name="logemail" placeholder="Tu mail...">
+                    <label for="logpassword">TU CONTRASEÑA:</label>
+                    <input type="password" name="logpassword" placeholder="Tu contraseña...">
+                    <input type="submit" value="Entrar">
                 </form>
             </section>
             <div>
-                <button id="openregistration">I don't have an account</button>
+                <button id="openregistration">No tengo cuenta</button>
             </div>
             <section id="register">
                 <h2>SIGN UP</h2>
                 <form id="formreg" action="#" method="POST">
-                    <label for="email">Mail</label>
-                    <input type="email" name="email" placeholder="Mail">
-                    <label for="password1">Password</label>
-                    <input type="password" name="password1" placeholder="Password...">
-                    <label for="password2">Repeat password</label>
-                    <input type="password" name="password2" placeholder="Repeat password...">
-                    <input type="submit" value="Register">
+                    <label for="email">MAIL:</label>
+                    <input type="email" name="email" placeholder="Email...">
+                    <label for="password1">CONTRASEÑA:</label>
+                    <input type="password" name="password1" placeholder="Contraseña...">
+                    <label for="password2">REPITE CONTRASEÑA:</label>
+                    <input type="password" name="password2" placeholder="Contraseña...">
+                    <input type="submit" value="Registrarse">
                 </form>
             </section>
         </section>
