ajustes de formulario en los estilos

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
     <header>
-        <div class="logout"></div>
     </header>
     <main>
         <section id="user-logged">
             <section id="bienvenidosection">
                 <a href="./pages/question.html"><button>COMENZAR QUIZ</button></a>
+                <div class="logout"></div>
             </section>
             <section id="homesection">
                 <div id="divtabla" class="scorediv">
@@ -48,9 +48,9 @@
             <section>
                 <h2>LOGIN</h2>
                 <form id="formlog" action="#" method="post">
-                    <label for="logemail">EMAIL:</label>
-                    <input type="email" name="logemail" placeholder="Tu mail...">
-                    <label for="logpassword">TU CONTRASEÑA:</label>
+                    <!-- <label for="logemail">EMAIL:</label> -->
+                    <input type="email" name="logemail" placeholder="Tu email...">
+                    <!-- <label for="logpassword">TU CONTRASEÑA:</label> -->
                     <input type="password" name="logpassword" placeholder="Tu contraseña...">
                     <input type="submit" value="Entrar">
                 </form>
@@ -61,12 +61,12 @@
             <section id="register">
                 <h2>SIGN UP</h2>
                 <form id="formreg" action="#" method="POST">
-                    <label for="email">MAIL:</label>
+                    <!-- <label for="email">MAIL:</label> -->
                     <input type="email" name="email" placeholder="Email...">
-                    <label for="password1">CONTRASEÑA:</label>
+                    <!-- <label for="password1">CONTRASEÑA:</label> -->
                     <input type="password" name="password1" placeholder="Contraseña...">
-                    <label for="password2">REPITE CONTRASEÑA:</label>
-                    <input type="password" name="password2" placeholder="Contraseña...">
+                    <!-- <label for="password2">REPITE CONTRASEÑA:</label> -->
+                    <input type="password" name="password2" placeholder="Repite contraseña...">
                     <input type="submit" value="Registrarse">
                 </form>
             </section>
