--- a/pages/results.html
+++ b/pages/results.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <header>
-        <div class="logout"></div>
     </header>
     <main class="mainresults">
         <section class="sectionresults">
@@ -20,9 +19,10 @@
                 <p id="mensajepuntuacion"></p>
             </div>
             <div>
-                <a href="../index.html"><button>COMPARA TUS RESULTADOS</button></a>
-                <a href="./question.html"><button>VUELVE A INTENTARLO</button></a>
+                <a href="../index.html"><button>&#60 TUS RESULTADOS </button></a>
+                <a href="./question.html"><button>VOLVER A INTENTAR</button></a>
             </div>
+            <div class="logout"></div>
         </section>
     </main>
     <footer>
